--- a/package.json
+++ b/package.json
@@ -4,12 +4,24 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "payload": "payload",
+    "ci": "payload migrate && pnpm build"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@fontsource/roboto": "^5.2.9",
+    "@heroui/react": "^3.0.0-beta.3",
+    "@heroui/styles": "^3.0.0-beta.3",
+    "@payloadcms/db-postgres": "3.72.0",
+    "@payloadcms/next": "3.72.0",
+    "@payloadcms/richtext-lexical": "3.72.0",
+    "@payloadcms/storage-s3": "^3.72.0",
+    "@payloadcms/ui": "3.72.0",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
@@ -20,14 +32,26 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.4",
+    "@radix-ui/themes": "^3.2.1",
+    "@react-email/components": "^1.0.4",
+    "@react-email/render": "^2.0.2",
     "@tailwindcss/postcss": "^4.1.18",
+    "@vercel/postgres": "^0.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^11.15.0",
+    "graphql": "^16.12.0",
     "lucide-react": "^0.469.0",
+    "motion": "^12.26.2",
     "next": "^16.1.1",
+    "payload": "3.72.0",
+    "pg": "^8.17.2",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "resend": "^6.7.0",
+    "sharp": "^0.34.5",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
