change config based on ENV

--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "eslint": "^9.39.2",
     "eslint-config-next": "^16.1.1",
     "postcss": "^8.4.49",
+    "supabase": "^2.72.8",
     "tailwindcss": "^4.1.18",
     "terser": "^5.37.0",
     "typescript": "^5.9.3"
