--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@payloadcms/richtext-lexical": "3.72.0",
     "@payloadcms/storage-s3": "^3.72.0",
     "@payloadcms/ui": "3.72.0",
+    "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
