--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "resend": "^6.9.1",
-    "sharp": "^0.34.5"
+    "sharp": "^0.34.5",
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@types/react": "^19.2.10",
