--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/themes": "^3.2.1",
     "@react-email/components": "^1.0.6",
     "@react-email/render": "^2.0.4",
+    "@tailwindcss/postcss": "^4.1.18",
     "@vercel/postgres": "^0.10.0",
     "clsx": "^2.1.1",
     "graphql": "^16.12.0",
