--- a/package.json
+++ b/package.json
@@ -8,67 +8,37 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "payload": "payload",
-    "ci": "payload migrate && pnpm build"
+    "payload": "cross-env NODE_OPTIONS=--no-deprecation payload",
+    "ci": "payload migrate && next build"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@fontsource/roboto": "^5.2.9",
-    "@heroui/react": "^3.0.0-beta.3",
-    "@heroui/styles": "^3.0.0-beta.3",
-    "@payloadcms/db-postgres": "3.72.0",
-    "@payloadcms/next": "3.72.0",
-    "@payloadcms/richtext-lexical": "3.72.0",
-    "@payloadcms/storage-s3": "^3.72.0",
-    "@payloadcms/ui": "3.72.0",
-    "@radix-ui/react-alert-dialog": "^1.1.4",
-    "@radix-ui/react-avatar": "^1.1.2",
-    "@radix-ui/react-checkbox": "^1.1.3",
-    "@radix-ui/react-dialog": "^1.1.4",
-    "@radix-ui/react-dropdown-menu": "^2.1.4",
-    "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-slider": "^1.2.2",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@radix-ui/react-tabs": "^1.1.2",
-    "@radix-ui/react-toast": "^1.2.4",
+    "@payloadcms/db-postgres": "3.73.0",
+    "@payloadcms/next": "3.73.0",
+    "@payloadcms/richtext-lexical": "3.73.0",
+    "@payloadcms/storage-s3": "^3.73.0",
+    "@payloadcms/ui": "3.73.0",
     "@radix-ui/themes": "^3.2.1",
-    "@react-email/components": "^1.0.4",
-    "@react-email/render": "^2.0.2",
+    "@react-email/components": "^1.0.6",
+    "@react-email/render": "^2.0.4",
     "@tailwindcss/postcss": "^4.1.18",
     "@vercel/postgres": "^0.10.0",
-    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "dotenv": "^17.2.3",
-    "embla-carousel-react": "^8.6.0",
-    "framer-motion": "^11.15.0",
     "graphql": "^16.12.0",
-    "lucide-react": "^0.469.0",
-    "motion": "^12.26.2",
-    "next": "^16.1.1",
-    "payload": "3.72.0",
-    "pg": "^8.17.2",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "resend": "^6.7.0",
+    "lucide-react": "^0.563.0",
+    "motion": "^12.29.2",
+    "next": "^16.1.6",
+    "payload": "3.73.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "resend": "^6.9.1",
     "sharp": "^0.34.5",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
-    "@babel/generator": "^7.26.3",
-    "@babel/parser": "^7.26.3",
-    "@babel/traverse": "^7.26.4",
-    "@babel/types": "^7.26.3",
-    "@types/node": "^20.19.29",
-    "@types/react": "^18.3.27",
-    "@types/react-dom": "^18.3.7",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.39.2",
-    "eslint-config-next": "^16.1.1",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^4.1.18",
-    "terser": "^5.37.0",
-    "typescript": "^5.9.3"
+    "@types/react": "^19.2.10",
+    "@types/react-dom": "^19.2.3",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18"
   }
 }
