--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@react-email/components": "^1.0.6",
     "@react-email/render": "^2.0.4",
     "@tailwindcss/postcss": "^4.1.18",
-    "@vercel/postgres": "^0.10.0",
     "clsx": "^2.1.1",
     "graphql": "^16.12.0",
     "lucide-react": "^0.563.0",
@@ -39,6 +38,7 @@
     "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
+    "supabase": "^2.74.5",
     "tailwindcss": "^4.1.18"
   }
 }
