--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
     "ci": "payload migrate && next build"
   },
   "dependencies": {
-    "@payloadcms/db-postgres": "3.73.0",
+    "@neondatabase/serverless": "^1.0.2",
+    "@payloadcms/db-vercel-postgres": "3.73.0",
     "@payloadcms/next": "3.73.0",
     "@payloadcms/richtext-lexical": "3.73.0",
-    "@payloadcms/storage-s3": "^3.73.0",
+    "@payloadcms/storage-vercel-blob": "3.73.0",
     "@payloadcms/ui": "3.73.0",
     "@radix-ui/themes": "^3.2.1",
     "@react-email/components": "^1.0.6",
     "@react-email/render": "^2.0.4",
     "@tailwindcss/postcss": "^4.1.18",
-    "@vercel/postgres": "^0.10.0",
     "clsx": "^2.1.1",
     "graphql": "^16.12.0",
     "lucide-react": "^0.563.0",
@@ -38,6 +38,7 @@
     "@types/react": "^19.2.10",
     "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.23",
+    "cross-env": "^10.1.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18"
   }
