--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start",
     "lint": "next lint",
     "payload": "cross-env NODE_OPTIONS=--no-deprecation payload",
-    "ci": "payload migrate --force && next build"
+    "ci": "payload migrate && next build"
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
